# oscopy

./: Cargo.toml
src/: main.rs
